--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,7 +2,11 @@
     background-image: url(../../assets/frutas.png);
     background-repeat: no-repeat;
     width: 100%;
-    min-height: 100vh;
+    min-height: 60vh;
     background-size: cover;
     background-position:center;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    
 }
