--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,8 +1,11 @@
-.fundoLogin {
-   
-    background-repeat: no-repeat;
-    min-height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
+
+
+  .body{
+    background-color: #F7F8F8;
   }
+
+  .login-titulo{
+    color:#454754
+  }
+
+  
