Segunda etapa da estilização do Catálogo

--- a/src/pages/catalogo/catalogo.css
+++ b/src/pages/catalogo/catalogo.css
@@ -1,5 +1,5 @@
 .fundoCatalogo {
-    background-image: url(../../assets/fundo-fruta-catalogo.png);
+    background-image: url(../../assets/CardPrimavera.png);
       background-repeat: no-repeat;
       width: 100%;
       min-height: 80vh;
