--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slick-prev:before, .slick-next:before {
+    font-size: 50px;
+   /* background: #000;*/
+    padding-top: 8px;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
