--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,11 +1,11 @@
 
-
-
 .color-navbar{
     background-color: #457D00;
     top: 0;
     position: sticky;
     z-index: 1;
-    color:white
+    color:white;
+    width: 100svw;
+
 }
 
